# ChangeLog for sci-chemistry/apbs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.24 2010/02/18 22:12:17 jlec Exp $

  18 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org> apbs-1.2.1b.ebuild:
  EAPI=3, keyworded for {amd64,x86}-linux, made it EPREFIX aware

*apbs-1.2.1b (04 Dec 2009)

  04 Dec 2009; Markus Dittrich <markusle@gentoo.org> +apbs-1.2.1b.ebuild,
  +files/apbs-1.2.1b-autoconf-2.64.patch:
  Version bump and fixed compilation with autoconf 2.64 (fixes bug
  #294453 and #295537).

*apbs-1.2.0 (03 Nov 2009)

  03 Nov 2009; Markus Dittrich <markusle@gentoo.org> -apbs-0.5.0.ebuild,
  -apbs-0.5.1.ebuild, +apbs-1.2.0.ebuild, +files/apbs-1.2.0-contrib.patch,
  +files/apbs-1.2.0-install-fix.patch, +files/apbs-1.2.0-link.patch,
  -files/apbs-examples-gentoo.patch, -files/apbs-gcc4-gentoo.patch,
  metadata.xml:
  Version bump (fixes bug #262905) and removed old ebuilds. Currently 
  missing is opal support (needs keywording by ppc) as well as fetk 
  support. Thanks much to Justin Lecher for his ebuild.

  06 May 2009; Markus Meier <maekke@gentoo.org> apbs-1.0.0-r1.ebuild:
  amd64/x86 stable, bug #250903

  05 Feb 2009; Jeremy Olexa <darkside@gentoo.org> apbs-0.5.0.ebuild,
  apbs-0.5.1.ebuild, apbs-1.0.0-r1.ebuild:
  (non maintainer commit) [QA] fix HOMEPAGE, bug 256488

*apbs-1.0.0-r1 (11 Oct 2008)

  11 Oct 2008; Markus Dittrich <markusle@gentoo.org>
  +files/apbs-1.0.0-LDFLAGS.patch,
  files/apbs-1.0.0-install-fix.patch, -apbs-1.0.0.ebuild,
  +apbs-1.0.0-r1.ebuild:
  Version bump to pull in updated patch fixing bad install location 
  for docs (see bug #241316). Added patch for ignored LDFLAGS.

*apbs-1.0.0 (29 Apr 2008)

  29 Apr 2008; Markus Dittrich <markusle@gentoo.org>
  +files/apbs-1.0.0-install-fix.patch,
  +files/apbs-1.0.0-libmaloc-noinstall.patch,
  +files/apbs-1.0.0-openmpi.patch, +apbs-1.0.0.ebuild:
  Version bump (fixes bug #219599). Changed license to BSD since