@@ -1,8 +1,10 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/Attic/apbs-1.2.1b.ebuild,v 1.3 2010/02/20 09:33:57 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/Attic/apbs-1.2.1b-r1.ebuild,v 1.1 2010/02/20 09:33:57 jlec Exp $
 
-EAPI="2"
+EAPI="3"
+
+PYTHON_DEPEND="2"
 
 inherit eutils fortran autotools python versionator flag-o-matic
 
@@ -17,7 +19,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}-source.tar.gz"
 
 SLOT="0"
 IUSE="arpack blas doc mpi python openmp"
-KEYWORDS="~x86 ~amd64 ~ppc"
+KEYWORDS="~x86 ~amd64 ~ppc ~amd64-linux ~x86-linux"
 
 DEPEND="dev-libs/maloc[mpi=]
 	blas? ( virtual/blas )
@@ -30,8 +32,6 @@ RDEPEND="${DEPEND}"
 FORTRAN="g77 gfortran ifc"
 
 src_prepare() {
-	python_version
-
 	epatch "${FILESDIR}"/${PN}-1.2.0-install-fix.patch
 	epatch "${FILESDIR}"/${PN}-1.2.0-contrib.patch
 	epatch "${FILESDIR}"/${PN}-1.2.0-link.patch
@@ -42,23 +42,23 @@ src_prepare() {
 }
 
 src_configure() {
-	local myconf="--docdir=/usr/share/doc/${PF}"
+	local myconf="--docdir=${EPREFIX}/usr/share/doc/${PF}"
 	use blas && myconf="${myconf} --with-blas=-lblas"
-	use arpack && myconf="${myconf} --with-arpack=/usr/$(get_libdir)"
+	use arpack && myconf="${myconf} --with-arpack=${EPREFIX}/usr/$(get_libdir)"
 
 	# check which mpi version is installed and tell configure
 	if use mpi; then
-		export CC="/usr/bin/mpicc"
-		export F77="/usr/bin/mpif77"
+		export CC="${EPREFIX}/usr/bin/mpicc"
+		export F77="${EPREFIX}/usr/bin/mpif77"
 
 		if has_version sys-cluster/mpich; then
-	 		myconf="${myconf} --with-mpich=/usr"
+	 		myconf="${myconf} --with-mpich=${EPREFIX}/usr"
 		elif has_version sys-cluster/mpich2; then
-			myconf="${myconf} --with-mpich2=/usr"
+			myconf="${myconf} --with-mpich2=${EPREFIX}/usr"
 		elif has_version sys-cluster/lam-mpi; then
-			myconf="${myconf} --with-lam=/usr"
+			myconf="${myconf} --with-lam=${EPREFIX}/usr"
 		elif has_version sys-cluster/openmpi; then
-			myconf="${myconf} --with-openmpi=/usr"
+			myconf="${myconf} --with-openmpi=${EPREFIX}/usr"
 		fi
 	fi || die "Failed to select proper mpi implementation"
 
@@ -72,7 +72,7 @@ src_configure() {
 
 	econf $(use_enable python) \
 		--disable-maloc-rebuild \
-		${myconf} || die "configure failed"
+		${myconf}
 }
 
 src_compile() {
