@@ -1,6 +1,12 @@
 # ChangeLog for sci-chemistry/apbs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.24 2010/02/18 22:12:17 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.25 2010/02/20 09:33:57 jlec Exp $
+
+*apbs-1.2.1b-r1 (20 Feb 2010)
+
+  20 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org> apbs-1.2.1b.ebuild,
+  +apbs-1.2.1b-r1.ebuild:
+  Reverted last change into a new revision
 
   18 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org> apbs-1.2.1b.ebuild:
   EAPI=3, keyworded for {amd64,x86}-linux, made it EPREFIX aware
